--- a/src/components/Tile/Tile.css
+++ b/src/components/Tile/Tile.css
@@ -33,3 +33,11 @@
 .tile .piece:active {
     cursor: grabbing;
 }
+
+.tile-highlight::before {
+    content: " ";
+    width: 25px;
+    height: 25px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+}
